# glory-streamer-app

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
assets/: bread_pony.json  ghost_sprite.json  platform_logo_sprite.json  twitch_sprite.json
cmake/: ProjectOptions.cmake
include/: engine.hxx  youtube_data_api.hxx
include/actors/: chat_ghost.hxx  pony.hxx  subscriber_ghost.hxx  youtube_manager.hxx
include/actors/components/: font_component.hxx  sprite_component.hxx
include/api/: twitch_api.hxx  youtube_api.hxx
include/assets/: asset.hxx  sprite_asset.hxx
include/core/: actor.hxx  actor_component.hxx  delegate.hxx  engine.hxx  font_component.hxx  log.hxx  object.hxx  object_component.hxx  sprite_component.hxx  subsystem.hxx  timer_manager.hxx
include/objects/: subscriber_ghost.hxx  youtube_manager.hxx
include/subsystems/: chat_ghosts_manager.hxx  timer_manager.hxx  twitch_manager.hxx  youtube_manager.hxx
src/: engine.cxx  main.cxx  youtube_data_api.cxx
src/actors/: chat_ghost.cxx  pony.cxx  subscriber_ghost.cxx  youtube_manager.cxx
src/actors/components/: font_component.cxx  sprite_component.cxx
src/api/: twitch_api.cxx  youtube_api.cxx  youtube_data_api.cxx
src/assets/: asset.cxx
src/core/: actor.cxx  actor_component.cxx  engine.cxx  font_component.cxx  object.cxx  sprite_component.cxx  timer_manager.cxx
src/objects/: subscriber_ghost.cxx  youtube_manager.cxx
src/secrets/: twitch-secret-template.h  youtube-secret-template.h
src/subsystems/: chat_ghosts_manager.cxx  timer_manager.cxx  twitch_manager.cxx  youtube_manager.cxx
